--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
-title: My website
-subtitle: This is where I will tell my friends way too much about me
+title: Data Science Portfolio
+subtitle: A Collection of Aerospace, AI and Other Awesome-ness
 use-site-title: true
 ---
 
