Updated the N in awesomeness

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Data Science Portfolio
-subtitle: A Collection of Aerospace, AI and Other Awesome-ness
+subtitle: A Collection of Aerospace, AI and Other Awesome-Ness
 use-site-title: true
 ---
 
