--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Data Science Portfolio
-subtitle: A Collection of Aerospace, AI and Other Awesome-Ness
+subtitle: 
 use-site-title: true
 ---
 
